# GROMACS-FMM

./: compile.sh
cmake/: gmxManageNvccConfig.cmake
exp/: README.md  noLJ-gpu.json  rungromacs.py
exp/result/20241213014821@noLJ-gpu/: confout.gro  mdout.mdp  result.edr  run.tpr  state.cpt
exp/result/20241213014838@noLJ-cpu/: confout.gro  mdout.mdp  result.edr  run.tpr  state.cpt
exp/result/20241213014838@noLJ-cpu/noLJ-cpu/: config.json
exp/settings/LJ_pre_surface0_nstep10w/: grompp.mdp
exp/settings/LJ_pre_surface0_nstep10w_half/: grompp.mdp  spce_noexcl.itp
exp/settings/LJ_pre_surface0_nstep20w/: grompp.mdp
exp/settings/LJ_sta_surface0_nstep1/: grompp.mdp  topol.top
exp/settings/LJ_sta_surface0_nstep10m/: conf.gro  grompp.mdp
exp/settings/LJ_sta_surface0_nstep10w/: grompp.mdp
exp/settings/noLJ_pre_surface0_nstep1/: grompp.mdp
exp/settings/noLJ_pre_surface1_nstep1/: grompp.mdp  spce_noexcl.itp
exp/settings/noLJ_sta_surface1_nstep1/: grompp.mdp
src/gromacs/: CMakeLists.txt
src/gromacs/coulomb_solvers/: CMakeLists.txt  basesolver.h  executer.h  solver.h
src/gromacs/coulomb_solvers/zeta_fmm/: CMakeLists.txt
src/gromacs/mdlib/: force.h  sim_util.cpp
src/gromacs/mdrun/: md.cpp
src/gromacs/rtfmm/: CMakeLists.txt  align.h  argument.cpp  argument.h  body.h  epkifmm.cpp  ewald.cpp  ewald_solver.cpp  ewald_solver.h  kernel.cpp  rtfmm_solver.cpp  rtfmm_solver.h  type.h
src/gromacs/zeta_fmm/: CMakeLists.txt  body.cu  body.h  cell.h  fmm.cpp  fmm.h  gpu_solver.cu  kernel.cu  kernel.h  solver.cpp  solver.h  traverser.cpp  traverser.h  tree.cpp  tree.h  type.h  zeta_fmm_solver.cpp  zeta_fmm_solver.h
